# MinecraftBedrockUnlocker

./: .editorconfig  .git-refresh  .gitattributes  .gitignore  Cargo.toml  INSTALL.md  LICENSE  MELHORIAS.md  README.md  README_PT-BR.md  SHA256SUMS.txt  SOURCE.md  THIRD_PARTY_NOTICES.md  TROUBLESHOOTING.md  bootstrap-v3.1.12.ps1  bootstrap-v3.2.0.ps1  build.py  build.rs  diagnose.ps1  e.ps1  i.ps1  install.bat  install.ps1  launcher.ps1  minecraft-unlocker-cli.manifest  resources.rc  unlocker.ps1  worker-code.js
.github/: FUNDING.yml
.github/workflows/: ci.yml  download-badge.yml  one-time-onlinefix-ini-fix.yml  rebuild-single-file-release.yml  release.yml
.history/: Cargo_20260225194657.toml
.history/src/: diagnostics_20260225194500.rs  diagnostics_20260225194522.rs  diagnostics_20260225194545.rs  dll_manager_20260225194139.rs  dll_manager_20260225194148.rs  dll_manager_20260225194206.rs  dll_manager_20260225194238.rs  health_check_20260225194246.rs  health_check_20260225194300.rs  health_check_20260225194314.rs  main_20260225194348.rs  main_20260225194410.rs  minecraft_20260225194332.rs
dlls/OnlineFix/: OnlineFix.ini
docs/: index.html
legacy/: install.bat
mbu-error-worker/: README.md  worker.js  wrangler.toml
runtime/: unlocker-core.ps1
scripts/: update-hashes.ps1
sha256_stage/: SHA256SUMS.txt  bootstrap-v3.2.0.ps1  diagnose.ps1  i.ps1  install.ps1  unlocker.ps1
src/: antivirus.rs  auto_update.rs  diagnostics.rs  dll_manager.rs  health_check.rs  i18n.rs  main.rs  minecraft.rs  process_utils.rs  utils.rs
