[package]
name = "minecraftunlocker-bycoelhofz"
version = "2.5.0"
edition = "2021"
authors = ["CoelhoFZ"]
description = "CLI tool for Minecraft Bedrock Edition DLL management"

[[bin]]
name = "mc_unlocker"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_System_RestartManager",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.52"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

[build-dependencies]
embed-resource = "2.4"

[profile.release]
opt-level = 3            # Maximum optimization for performance
lto = "thin"             # Link-Time Optimization
codegen-units = 16       # Code generation units
strip = true             # Strip symbols for smaller binary
panic = "unwind"         # Default panic behavior
debug = false            # No debug information
